--- a/demo/index.html
+++ b/demo/index.html
@@ -42,7 +42,7 @@
             position: fixed;
             top: 0;
             bottom: 0;
-            right: 8px;
+            left: 8px;
             width: 128px;
             z-index: 100;
             pointer-events: none;
