--- a/demo/index.html
+++ b/demo/index.html
@@ -81,7 +81,7 @@
 
     <div class="card text-white bg-dark">
         <div class="card-body text-center">
-            <p class="card-text">Welcome to HEAT. Enable the extension, choose a demo on the right and click!</p>
+            <p class="card-text">Welcome to HEAT. Enable the extension, choose a demo on the left and click!</p>
         </div>
     </div>
 
