--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                         <a class="btn btn-outline-light" href="/sequence/">Sequence</a>
                         <a class="btn btn-outline-light" href="/baby/">Baby</a>
                         <a class="btn btn-outline-light" href="/paint/">Paint</a>
+                        <a class="btn btn-outline-light" href="/vote/">Vote</a>
                         <!-- <a class="btn btn-outline-light" href="/warp/">Warp</a>
                         <a class="btn btn-outline-light" href="/pixel/">Pixel</a> -->
                     </div>
