Cleanup and updates to help and about.

--- a/about/index.html
+++ b/about/index.html
@@ -17,6 +17,15 @@
             height: 100%;
         }
 
+        h1 {
+            font-size: 1.2em;
+        }
+
+        h2 {
+            font-size: 1em;
+            color: #666;
+        }
+
         footer {
             color: white;
         }
@@ -57,10 +66,16 @@
                     <div class="col card">
 
                         <div class="card-body">
+                            <h1>About Heat</h1>
+                            <hr />
+
                             <p class="card-text">
                                 Heat is a Twitch Extension that allows for user engagement through clicking directly on
                                 the video. It was created by <a href="https://www.scottmadethis.net/">Scott Garner</a>
                                 for the Twitch AWS Extensions Challenge. </p>
+
+                            <p><a href="https://github.com/scottgarner/Heat/wiki/" class="card-link">&raquo;
+                                    Learn More from the Heat Wiki</a></p>
                         </div>
 
                     </div>
