--- a/help/index.html
+++ b/help/index.html
@@ -75,19 +75,19 @@
                                 coordinate data. This data can be used with preexisting demos or to create new
                                 experiences.</p>
 
-                            <p><a href="https://github.com/scottgarner/Heat/wiki/Overview" class="card-link">&raquo;
+                            <p><a href="https://github.com/scottgarner/Heat/wiki/" class="card-link">&raquo;
                                     Learn More about Heat</a></p>
 
                             <hr />
 
-                            <h2>Using the Demos</h2>
+                            <h2>Using the Presets</h2>
 
                             <p>After enabling Heat for your channel, follow the "Browse Overlays" link. This will
                                 automatically append your channel's id to the URL, allowing Heat to receive your click
                                 data.</p>
 
-                            <p><a href="https://github.com/scottgarner/Heat/wiki/Using-Demos" class="card-link">&raquo;
-                                    Learn More about Using the Demos</a></p>
+                            <p><a href="https://github.com/scottgarner/Heat/wiki/#presets" class="card-link">&raquo;
+                                    Learn More about Using the Presets</a></p>
 
                             <hr />
 
@@ -96,7 +96,7 @@
                             <p>Please visit the Heat wiki for information on creating your own custom
                                 viewing experiences.</p>
 
-                            <p><a href="https://github.com/scottgarner/Heat/wiki/Custom-Experiences"
+                            <p><a href="https://github.com/scottgarner/Heat/wiki#custom-experiences"
                                     class="card-link">&raquo;
                                     Learn More about Creating Custom Experiences</a></p>
                         </div>
