Link fixes and new help section.

--- a/help/index.html
+++ b/help/index.html
@@ -86,7 +86,8 @@
                                 automatically append your channel's id to the URL, allowing Heat to receive your click
                                 data.</p>
 
-                            <p><a href="https://github.com/scottgarner/Heat/wiki/#presets" class="card-link">&raquo;
+                            <p><a href="https://github.com/scottgarner/Heat/wiki/Overview#presets"
+                                    class="card-link">&raquo;
                                     Learn More about Using the Presets</a></p>
 
                             <hr />
@@ -96,9 +97,15 @@
                             <p>Please visit the Heat wiki for information on creating your own custom
                                 viewing experiences.</p>
 
-                            <p><a href="https://github.com/scottgarner/Heat/wiki#custom-experiences"
+                            <p><a href="https://github.com/scottgarner/Heat/wiki/Overview#custom-experiences"
                                     class="card-link">&raquo;
                                     Learn More about Creating Custom Experiences</a></p>
+
+                            <h2>Getting Help</h2>
+
+                            Please view the <a href="https://github.com/scottgarner/Heat/wiki">Wiki</a> or join the
+                            <a href="https://discord.gg/GtAffRP">Discord</a> for help using Heat.
+
                         </div>
 
                     </div>
