Homepage tweaks, add Ko-Fi.

--- a/index.html
+++ b/index.html
@@ -60,9 +60,14 @@
                         <a class="btn btn-outline-light" href="/markers/">Markers</a>
                         <a class="btn btn-outline-light" href="/kissingbooth/">Kiss</a>
                         <a class="btn btn-outline-light" href="/sequence/">Sequence</a>
+                    </div>
+                </div>
+                <div class="row justify-content-center align-items-center text-center">
+                    <div id="demos" class="btn-group mt-2" role="group" aria-label="Basic example">
                         <a class="btn btn-outline-light" href="/baby/">Baby</a>
                         <a class="btn btn-outline-light" href="/paint/">Paint</a>
                         <a class="btn btn-outline-light" href="/vote/">Vote</a>
+                        <a class="btn btn-outline-light" href="/tomatoes/">Tomatoes</a>
                         <!-- <a class="btn btn-outline-light" href="/warp/">Warp</a>
                         <a class="btn btn-outline-light" href="/pixel/">Pixel</a> -->
                     </div>
@@ -101,6 +106,18 @@
         })();
 
     </script>
+
+    <style>
+        .btn-container {
+            position: absolute;
+            bottom: 1em;
+            left: 1em;
+        }
+    </style>
+
+    <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
+    <script
+        type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#0ab89d', 'H2H0I5NI8'); kofiwidget2.draw();</script>
 
 </body>
 
