--- a/status/index.html
+++ b/status/index.html
@@ -1,5 +1,10 @@
 <html>
 
+<head>
+    <title>Live Heat Broadcasts</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
 <body>
     <div id="app"></div>
     <script src="https://unpkg.com/vue@next"></script>
